Fix single video in video tutorials sidebox shows extra spaces at top and bottom

--- a/phpgwapi/templates/default/def_tutorials.less
+++ b/phpgwapi/templates/default/def_tutorials.less
@@ -68,6 +68,10 @@ span.egw_tutorial_title {
 [id^="egw_tutorial_"][id$="sidebox_list"] {
 	overflow-x: hidden;
 	overflow-y: auto;
+	max-height: 200px;
+}
+#list_grid_wrapper {
+	max-height: 200px;
 }
 
 
